--- a/.github/workflows/publish-docker-master.yml
+++ b/.github/workflows/publish-docker-master.yml
@@ -3,10 +3,11 @@ on:
   schedule:
     - cron: '15 5 * * *'
 
-call-reusable-workflow:
-  uses: ./.github/workflows/reusable-docker-publish.yml
-  with:
-    ckan-major-version: "master"
-    ckan-version: "master"
-    base-tags: '["ckan/ckan-base:master", "ckan/ckan-base:master-py3.10"]'
-    dev-tags: '["ckan/ckan-dev:master", "ckan/ckan-dev:master-py3.10"]'
+jobs:
+  call-reusable-workflow:
+    uses: ./.github/workflows/reusable-docker-publish.yml
+    with:
+      ckan-major-version: "master"
+      ckan-version: "master"
+      base-tags: '["ckan/ckan-base:master", "ckan/ckan-base:master-py3.10"]'
+      dev-tags: '["ckan/ckan-dev:master", "ckan/ckan-dev:master-py3.10"]'
