--- a/.github/workflows/publish-docker-2.9-py3.yml
+++ b/.github/workflows/publish-docker-2.9-py3.yml
@@ -8,5 +8,6 @@ jobs:
     with:
       ckan-major-version: "2.9"
       ckan-version: "2.9.11"
+      docker-file: "Dockerfile.py3.9"
       base-tags: '["ckan/ckan-base:2.9-py3.9", "ckan/ckan-base:2.9.11-py3.9"]'
       dev-tags: '["ckan/ckan-dev:2.9-py3.9", "ckan/ckan-dev:2.9.11-py3.9"]'
