--- a/.github/workflows/publish-docker-2.10-py3.yml
+++ b/.github/workflows/publish-docker-2.10-py3.yml
@@ -11,3 +11,6 @@ jobs:
       docker-file: "Dockerfile.py3.9"
       base-tags: '["ckan/ckan-base:2.10-py3.10", "ckan/ckan-base:2.10.4-py3.10"]'
       dev-tags: '["ckan/ckan-dev:2.10-py3.10", "ckan/ckan-dev:2.10.4-py3.10"]'
+    secrets:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
