--- a/.github/workflows/publish-docker-2.10.yml
+++ b/.github/workflows/publish-docker-2.10.yml
@@ -10,3 +10,6 @@ jobs:
       ckan-version: "2.10.4"
       base-tags: '["ckan/ckan-base:2.10", "ckan/ckan-base:2.10.4"]'
       dev-tags: '["ckan/ckan-dev:2.10", "ckan/ckan-dev:2.10.4"]'
+    secrets:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
