--- a/.github/workflows/publish-docker-2.11.yml
+++ b/.github/workflows/publish-docker-2.11.yml
@@ -11,3 +11,6 @@ jobs:
       # TODO: minor version
       base-tags: '["ckan/ckan-base:2.11", "ckan/ckan-base:2.11-py3.10"]'
       dev-tags: '["ckan/ckan-dev:2.11", "ckan/ckan-dev:2.11-py3.10"]'
+    secrets:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
