--- a/.github/workflows/publish-docker-2.9-py3.yml
+++ b/.github/workflows/publish-docker-2.9-py3.yml
@@ -11,3 +11,6 @@ jobs:
       docker-file: "Dockerfile.py3.9"
       base-tags: '["ckan/ckan-base:2.9-py3.9", "ckan/ckan-base:2.9.11-py3.9"]'
       dev-tags: '["ckan/ckan-dev:2.9-py3.9", "ckan/ckan-dev:2.9.11-py3.9"]'
+    secrets:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
