--- a/.github/workflows/publish-docker-2.9.yml
+++ b/.github/workflows/publish-docker-2.9.yml
@@ -10,3 +10,6 @@ jobs:
       ckan-version: "2.9.11"
       base-tags: '["ckan/ckan-base:2.9", "ckan/ckan-base:2.9.11"]'
       dev-tags: '["ckan/ckan-dev:2.9", "ckan/ckan-dev:2.9.11"]'
+    secrets:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
