--- a/.github/workflows/publish-docker-master.yml
+++ b/.github/workflows/publish-docker-master.yml
@@ -11,3 +11,6 @@ jobs:
       ckan-version: "master"
       base-tags: '["ckan/ckan-base:master", "ckan/ckan-base:master-py3.10"]'
       dev-tags: '["ckan/ckan-dev:master", "ckan/ckan-dev:master-py3.10"]'
+    secrets:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
