--- a/.github/workflows/publish-docker-2.11.yml
+++ b/.github/workflows/publish-docker-2.11.yml
@@ -9,8 +9,8 @@ jobs:
       ckan-major-version: "2.11"
       ckan-version: "2.11"
       # TODO: minor version
-      base-tags: '["ckan/ckan-base:2.11", "ckan/ckan-base:2.11-py3.10"]'
-      dev-tags: '["ckan/ckan-dev:2.11", "ckan/ckan-dev:2.11-py3.10"]'
+      base-tags: "ckan/ckan-base:2.11,ckan/ckan-base:2.11-py3.10"
+      dev-tags: "ckan/ckan-dev:2.11,ckan/ckan-dev:2.11-py3.10"
     secrets:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
