--- a/.github/workflows/publish-docker-master.yml
+++ b/.github/workflows/publish-docker-master.yml
@@ -1,7 +1,7 @@
 name: Build and publish the master docker-ckan image
 on:
   schedule:
-    - cron: '15 5 * * *'
+    - cron: "15 5 * * *"
 
 jobs:
   call-reusable-workflow:
@@ -9,8 +9,8 @@ jobs:
     with:
       ckan-major-version: "master"
       ckan-version: "master"
-      base-tags: '["ckan/ckan-base:master", "ckan/ckan-base:master-py3.10"]'
-      dev-tags: '["ckan/ckan-dev:master", "ckan/ckan-dev:master-py3.10"]'
+      base-tags: "ckan/ckan-base:master,ckan/ckan-base:master-py3.10"
+      dev-tags: "ckan/ckan-dev:master,ckan/ckan-dev:master-py3.10"
     secrets:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
