--- a/.github/workflows/publish-docker-2.10.yml
+++ b/.github/workflows/publish-docker-2.10.yml
@@ -7,7 +7,7 @@ jobs:
     uses: ./.github/workflows/reusable-docker-publish.yml
     with:
       ckan-major-version: "2.10"
-      ckan-version: "2.10.4"
+      ckan-version: "ckan-2.10.4"
       base-tags: "ckan/ckan-base:2.10,ckan/ckan-base:2.10.4"
       dev-tags: "ckan/ckan-dev:2.10,ckan/ckan-dev:2.10.4"
     secrets:
