--- a/.github/workflows/publish-docker-master.yml
+++ b/.github/workflows/publish-docker-master.yml
@@ -1,7 +1,7 @@
 name: Build and publish the master docker-ckan image
 on:
   schedule:
-    - cron: '15 5 * * *'
+    - cron: '0 0 1 1 *'
 
 jobs:
   build:
